k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app-canary
  namespace: argo-rollouts
spec:
  selector:
    app: canary-app
  ports:
    - port: 80
      targetPort: 8081
