k8s/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app-stable
  namespace: argo-rollouts
spec:
  selector:
    app: canary-app
  ports:
    - port: 80
      targetPort: 8080
